Add method to calculate svn or bzr revision set conf parametter in default build
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9233 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/tools/simple-cdd/Makefile
+++ b/tools/simple-cdd/Makefile
@@ -2,13 +2,25 @@ USRGRP=$(shell id -g)
 DIST=lenny
 DIST=squeeze
 
+in_svn_repo:= $(wildcard .svn/)
+ifeq ($(strip $(in_svn_repo)),)
+in_bzr_repo:= $(wildcard ../../.bzr/)
+ifeq ($(strip $(in_bzr_repo)),)
+        svnrev=unknown
+else
+        svnrev=bzr$(shell bzr revno)
+endif
+else
+        svnrev=$(shell LANG=C svn info 2>&1 | grep Revision | cut -d: -f2| sed 's/ //g')
+endif
+
 default: fusionforgemulti
 
 fusionforge: passsetup /usr/bin/build-simple-cdd 
 	build-simple-cdd -g --profiles fusionforge --auto-profiles fusionforge --profiles-udeb-dist $(DIST) --debian-mirror http://ftp.fr.debian.org/debian --security-mirror http://security.debian.org/debian-security --dist $(DIST) 
 
 fusionforgemulti: passsetup /usr/bin/build-simple-cdd
-	build-simple-cdd -g --profiles fusionforge,x-basic,x-gnome,autopart --profiles-udeb-dist $(DIST) --debian-mirror http://ftp.fr.debian.org/debian --security-mirror http://security.debian.org/debian-security --dist $(DIST) 
+	build-simple-cdd -g --profiles fusionforge,x-basic,x-gnome,autopart --profiles-udeb-dist $(DIST) --debian-mirror http://ftp.fr.debian.org/debian --security-mirror http://security.debian.org/debian-security --dist $(DIST) --conf profiles/fusionforge.conf
 
 fusionforgefr: clean /usr/bin/build-simple-cdd
 	build-simple-cdd -g --profiles fusionforge --auto-profiles fusionforge --profiles-udeb-dist $(DIST) --debian-mirror http://ftp.fr.debian.org/debian --security-mirror http://security.debian.org/debian-security --dist $(DIST) --locale fr_FR --force-preseed --keyboard fr-latin9
