Make possible to build install cd on several arch
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9242 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/tools/simple-cdd/profiles/fusionforge.conf
+++ b/tools/simple-cdd/profiles/fusionforge.conf
@@ -8,6 +8,8 @@ export OFFICIAL_VAL=0
 export OMIT_MANUAL=1
 export OMIT_RELEASE_NOTES=1
 
+export simple_cdd_temp="$simple_cdd_dir/tmp.$(dpkg --print-architecture)/"
+
 # location of the CD image (used with qemu's -cdrom option)
 cd_img="$OUT/${CDNAME:-debian}-$(echo $DEBVERSION | sed -e 's/[. ]//g')-$(echo $ARCHES | tr ' ' '-')-CD-1.iso"
 
