Fix a pbuilder error Add target to build and clean doc
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9258 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -149,6 +149,12 @@ orig: $(TARBALLS)/$(ORIGFILE) # Make FUSIONFORGE orig file
 # Get phpdocumentor, install phpdocumentor, build $(PKGNAME) phpdoc
 phpdoc: $(PKGDIR)/docs/phpdoc/docs 
 
+doc:
+	(cd gforge/docs/docbook ; make debian)
+
+cleandoc:
+	(cd gforge/docs/docbook ; make clean)
+
 phpdocumentor_get:
 	[ ! -f $(documentor_path)/$(documentor_file) ] && \
         cd $(documentor_path) && \
@@ -238,7 +244,7 @@ $(BUILDFILES)/$(PDSCFILE):
 	# Set version for given distrib
 	cd $(BUILDFILES)/$(PKGDIR); dch -b -v $(MAJOR)$(MINOR)+p -D UNRELEASED "This is $(DISTRIB) autobuild"
 	perl -pi -e "s/UNRELEASED/$(DISTRIB)/" $(BUILDFILES)/$(PKGDIR)/debian/changelog
-	cd $(BUILDFILES) ; dpkg-source -b $(PKGNAME)
+	cd $(BUILDFILES) ; dpkg-source -b $(PKGDIR)
 	rm -rf $(BUILDFILES)/$(PKGDIR)
 
 $(BUILDFILES)/$(ORIGFILE): $(TARBALLS)/$(ORIGFILE)
