Fix an error in pbuild
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@9259 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -238,7 +238,7 @@ $(BUILDFILES)/$(PDSCFILE):
 	# Set version for given distrib
 	cd $(BUILDFILES)/$(PKGDIR); dch -b -v $(MAJOR)$(MINOR)+p -D UNRELEASED "This is $(DISTRIB) autobuild"
 	perl -pi -e "s/UNRELEASED/$(DISTRIB)/" $(BUILDFILES)/$(PKGDIR)/debian/changelog
-	cd $(BUILDFILES) ; dpkg-source -b $(PKGNAME)
+	cd $(BUILDFILES) ; dpkg-source -b $(PKGDIR)
 	rm -rf $(BUILDFILES)/$(PKGDIR)
 
 $(BUILDFILES)/$(ORIGFILE): $(TARBALLS)/$(ORIGFILE)
