Don't ask passwd by default
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9289 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/3rd-party/nusoap/Makefile.debian
+++ b/3rd-party/nusoap/Makefile.debian
@@ -23,7 +23,7 @@ LOCALREPOUBU=/var/www/ubuntu-fusionforge-$(BRANCH)
 DEBIANLIST=1lenny
 UBUNTULIST=1jaunty 1karmic
 ASKPASS=--ask-passphrase
-#ASKPASS=
+ASKPASS=
 
 # Try if a local mirror is available
 UBUNTUOP=$(shell wget -q -S http://localhost/ubuntu -O /dev/null && echo "--mirror http://localhost/ubuntu" || echo "--mirror http://archive.ubuntu.com/ubuntu") --debootstrap debootstrap
