--- a/Makefile.rh
+++ b/Makefile.rh
@@ -30,7 +30,7 @@ svnplugin: cleansvn buildsvn  # package svn plugin #
 allmodules : libnsspgsql
 
 #Exterals
-allexternals : htmlpurifier
+allexternals : htmlpurifier php-jpgraph
 
 libnsspgsql : buildlibnsspgsql
 
@@ -179,8 +179,13 @@ buildlibnsspgsql:               # Build rpm fusionforge-shell-postgresql package
 	cd $(RPM_TMP)/SOURCES/; rpmbuild -ts --nodeps fusionforge-shell-postgresql-$(version).tar.bz2
 
 #
-# HTMLPURIFIER (third party plugin)
+# Building RPM for third party plugins
 #
 htmlpurifier: rpmprep
 	cp 3rd-party/htmlpurifier/htmlpurifier-4.0.0.tar.gz $(RPM_TMP)/SOURCES/
 	rpmbuild --quiet --clean -ba 3rd-party/htmlpurifier/htmlpurifier.spec
+
+php-jpgraph: rpmprep
+	cp 3rd-party/php-jpgraph/libphp-jpgraph_1.5.2.orig.tar.gz $(RPM_TMP)/SOURCES/jpgraph-1.5.2.tar.gz
+	zcat 3rd-party/php-jpgraph/libphp-jpgraph_1.5.2-12.diff.gz > $(RPM_TMP)/SOURCES/libphp-jpgraph_1.5.2-12.diff
+	rpmbuild --quiet --clean -ba 3rd-party/php-jpgraph/php-jpgraph.spec
