Reintroduce liberation font patch over debian one for php-jpgraph
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9314 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.rh
+++ b/Makefile.rh
@@ -188,4 +188,5 @@ htmlpurifier: rpmprep
 php-jpgraph: rpmprep
 	cp 3rd-party/php-jpgraph/libphp-jpgraph_1.5.2.orig.tar.gz $(RPM_TMP)/SOURCES/jpgraph-1.5.2.tar.gz
 	zcat 3rd-party/php-jpgraph/libphp-jpgraph_1.5.2-12.diff.gz > $(RPM_TMP)/SOURCES/libphp-jpgraph_1.5.2-12.diff
+	cp 3rd-party/php-jpgraph/*.patch $(RPM_TMP)/SOURCES/
 	rpmbuild --quiet --clean -ba 3rd-party/php-jpgraph/php-jpgraph.spec
