take in account BUILDERDIR env var
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9335 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -7,7 +7,11 @@ PKGLETTER=$(shell echo $(PKGNAME) | cut -c1)
 ORIGIN=debian.fusionforge.org
 BRANCH=$(shell [ "$(shell echo $(basename $(CURDIR)) | sed 's/.*runk.*/trunk/')" = "trunk" ] && echo svn || echo brc)
 #
+ifeq (,$(shell echo "$$BUILDERDIR"))
 BUILDERDIR=$(CURDIR)/builder
+else
+BUILDERDIR=$(shell echo $$BUILDERDIR)
+endif
 BUILDRESULT=$(CURDIR)/result
 TARBALLS=$(CURDIR)/tarballs
 #
