TODO: document the Makefile
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9350 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/Makefile.debian
+++ b/Makefile.debian
@@ -1,5 +1,9 @@
 #! /usr/bin/make -f
 
+#
+# TODO : document the role of this Makefile
+#
+
 FUSIONFORGE=FusionForge
 PKGDIR=gforge
 PKGNAME=$(shell head -1 $(PKGDIR)/debian/changelog | sed 's/ .*//')
