--- a/Makefile.rh
+++ b/Makefile.rh
@@ -1,5 +1,9 @@
 #! /usr/bin/make -f
 
+#
+# TODO : document the role of this Makefile
+#
+
 list:
 	@echo ======================================================================================
 	@echo '=                    Available target are listed below                               ='
@@ -113,7 +117,7 @@ target cleansvn buildsvn : override version=$(shell grep '^Version:' gforge/plug
 cleansvn:               # Clean files of gforge-plugin-scmcvs build           #
 	@cd $(RPM_TMP)/SOURCES/; rm -rf fusionforge-plugin-scmsvn-$(version).tar.bz2 fusionforge-plugin-scmsvn-$(version)
 	@echo cleansvn Done
-	
+
 buildsvn:               # Build rpm gforge-plugin-scmsvn package                  #
 	cd gforge/plugins/scmsvn; find . -type f | grep -v '/CVS/' | grep -v '/.svn/' | grep -v contrib | grep -v '/debian/' | cpio -pdumvB --quiet $(RPM_TMP)/SOURCES/fusionforge-plugin-scmsvn-$(version)
 	mkdir -p $(RPM_TMP)/SOURCES/fusionforge-plugin-scmsvn-$(version)/bin
