--- a/gforge/etc/local.inc.example
+++ b/gforge/etc/local.inc.example
@@ -183,6 +183,13 @@ $sys_use_project_multimedia=false;
 //	If set to true, only a site admin can register projects
 //
 $sys_project_reg_restricted=true;
+
+//
+//  Auto approve project registration.
+//
+$sys_project_reg_autoapprove=false;
+$sys_project_reg_autoapprove_user='admin';
+
 //
 //	Restricted user registration
 //	If set to true, only a site admin can register users
