--- a/plugins/templates/helloworld/debian/control
+++ b/plugins/templates/helloworld/debian/control
@@ -12,9 +12,9 @@ Vcs-Bzr: http://scm.fusionforge.org/bzr/fusionforge/svn-trunk-ro/
 Package: fusionforge-plugin-helloworld
 Architecture: all
 Depends: gforge-common, gforge-db-postgresql | gforge-db, gforge-web-apache2 | gforge-web, gforge-shell-postgresql | gforge-shell, php5-cli, ${misc:Depends}
-Description: collaborative development tool - Helloworld plugin
+Description: collaborative development tool - HelloWorld plugin
  .
- This plugin contains the Helloworld subsystem of FusionForge. It allows each
- FusionForge project to have its own Helloworld, and gives some
+ This plugin contains the HelloWorld subsystem of FusionForge. It allows each
+ FusionForge project to have its own HelloWorld, and gives some
  control over it to the project's administrator.
 
