Use include from main maikefile
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9456 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/3rd-party/mailman/Makefile
+++ b/3rd-party/mailman/Makefile
@@ -3,8 +3,14 @@ DISTREDHAT=$(shell grep -qi 'Red Hat' /etc/issue && echo rh)
 DISTSUSE=$(shell grep -qi 'SuSE' /etc/issue && echo rh)
 DIST=$(DISTDEBIAN)$(DISTREDHAT)$(DISTSUSE)
 
+PKGDIR=mailman-2.1.13
+MINOR=$(shell head -1 $(PKGDIR)/debian/changelog | sed 's/.*(.*-\([^-]*\)).*/\1/')
+
+PARAM=PKGDIR=$(PKGDIR) svnrev=$(MINOR)
+
 default:
-	@make -f Makefile.$(DIST) default
+	@make -f Makefile.$(DIST) $(PARAM) default
+	@cat ../../Makefile.$(DIST) | grep '^.*:.*#$$' | sed 's/FUSIONFORGE/$(FUSIONFORGE)/' | sed 's/^\(.*:\).*#\(.*\)#$$/\1		\2/'
 
 %:
-	@make -f Makefile.$(DIST) $@
+	@make -f Makefile.$(DIST) $(PARAM) $@
